plugins {
    id 'java'
}

java {
    // toolchain, а НЕ sourceCompatibility: последняя даёт javac -source/-target, который
    // не подменяет библиотеку классов — код собирается против API текущего JDK и молча
    // проезжает мимо заявленной версии. toolchain фиксирует и компилятор, и API.
    // 21, потому что ExecutorService реализует AutoCloseable только с Java 19
    // (try-with-resources над пулом в tdd-тестах).
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    main {
        java { srcDirs = ['src'] }
    }
    test {
        java { srcDirs = ['test'] }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
    testImplementation 'org.assertj:assertj-core:3.26.3'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}
